--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint": "eslint src --ext .js",
     "lint:fix": "eslint src --ext .js --fix",
     "format": "prettier --write \"src/**/*.{js,css,scss,html}\"",
-    "analyze": "vite-bundle-analyzer"
+    "analyze": "npx vite-bundle-analyzer"
   },
   "keywords": [
     "game",
