Add build timestamp and force orphan gh-pages deploy
This commit injects a build timestamp into the dist directory and sets the deploy action to use a force orphan branch for gh-pages. These changes improve traceability of builds and ensure a clean deployment history.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,6 +62,9 @@ jobs:
           ls -la dist
           find dist -type f
 
+      - name: Inject build timestamp
+        run: date > dist/.timestamp
+
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
@@ -94,6 +97,7 @@ jobs:
           publish_dir: dist
           publish_branch: gh-pages
           commit_message: '🚀 Deploy production build from commit ${{ github.sha }}'
+          force_orphan: true
 
   deploy-dev:
     needs: lint-test-build
